kubernetes-manifests/todos.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-service
spec:
  type: ClusterIP
  selector:
    app: todos
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-deployment
spec:
  selector:
    matchLabels:
      app: todos
  template:
    metadata:
      labels:
        app: todos
    spec:
      containers:
        - name: todos
          image: gcr.io/devops-lab-2/todos:v1
          resources:
            requests:
              memory: "32Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
