kubernetes-manifests/users.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  type: ClusterIP
  selector:
    app: users
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
spec:
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: gcr.io/devops-lab-2/users:v1
          resources:
            requests:
              memory: "32Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
