kubernetes-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: router
spec:
  rules:
    - http:
        paths:
          - path: /todos
            backend:
              serviceName: todos-service
              servicePort: 8080
          - path: /users
            backend:
              serviceName: users-service
              servicePort: 8080
